--- a/WORKSHEETS/WORKSHEET5/RWorksheet_sabio#5.Rmd
+++ b/WORKSHEETS/WORKSHEET5/RWorksheet_sabio#5.Rmd
@@ -135,7 +135,8 @@ Write the codes and its result.The barplot should be like this.
 ```{r, vector = TRUE}
 
 barplot(height = as.matrix(dfIris),main = "Iris Data",
-         ylab = "Mean Scores", 
+         ylab = "Mean Scores",
+         xlab = "Characteristics",
          beside =TRUE, col = rainbow(3)
         )
 
